--- a/BD.html
+++ b/BD.html
@@ -108,14 +108,19 @@
             <div id="pageBody6" class="pageBody">
                 <p>반입용 엑셀 (소장자료 복본 확인용)</p>
                 <button id="writeExcelImport" class="writeExcel button-4" role="button">엑셀 다운로드</button>
+                <br class="clearFloat">
                 <p>검토용 엑셀 (구입여부 최종 검토)</p>
                 <button id="writeExcelConsider" class="writeExcel button-4" role="button">엑셀 다운로드</button>
-                <hr>
-                <p>알라딘 검색결과 일괄 열기 (ISBN 기준 - 검색결과가 없으면 창을 새로고침[F5]하세요)</p>
-                <button id="searchAladinUp" class="searchAladin button-1" role="button">알라딘 검색 - 목록 위에서 아래로 ↓</button>
-                <br>
-                <button id="searchAladinDown" class="searchAladin button-1" role="button">알라딘 검색 - 목록 아래에서 위로 ↑</button>
-                <p>알라딘 검색 제외 도서 체크 (반입용 엑셀로 복본 조사 후, 복본에 해당하는 도서를 제외하세요)</p>
+                <hr class="clearFloat">
+                <p>알라딘, K.LAS 일괄 검색 (ISBN 기준, K.LAS는 사전에 로그인이 되어 있어야 함)</p>
+                <p style="font-size:14px;">* 알라딘 검색결과가 없을 경우, 해당 페이지를 새로고침(F5)하세요.</p>
+                <button id="searchAladinUp" class="searchAladin button-1" role="button">알라딘 검색<br><span class="desc">(목록 위에서 아래로)</span></button>
+                <button id="searchKlasUp" class="searchKlas button-2" role="button">K.LAS 전 도서관 검색<br><span class="desc">(목록 위에서 아래로)</span></button>
+                <br class="clearFloat">
+                <button id="searchAladinDown" class="searchAladin button-1" role="button">알라딘 검색<br><span class="desc">(목록 아래에서 위로)</span></button>
+                <button id="searchKlasDown" class="searchKlas button-2" role="button">K.LAS 전 도서관 검색<br><span class="desc">(목록 아래에서 위로)</span></button>
+                <br class="clearFloat">
+                <p>알라딘, K.LAS 검색 제외 체크 (반입용 엑셀로 복본 조사 후, 복본에 해당하는 도서를 제외하세요)</p>
                 <div id="pageBody6_data">
                     <table id="dataTable6" class="dataTable" class="hidden"></table>
                 </div>
